--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -22,7 +22,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Test with Gradle
-        run: ./gradlew build jacocoTestReport
+        run: ./gradlew build jacocoTestCoverageVerification
 
       - name: Report to CodeCov
         uses: codecov/codecov-action@v1
